--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+        <ul>
+            <a href="https://acciojob.com/">Home</a>
+            <a href="https://acciojob.com/blog/about/">About us</a>
+            <a href="https://acciojob.com/events.html">Contact us</a>
+        </ul>
+    </nav>
+    <h1>3 random videos</h1>
+    <ol>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video></li>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video></li>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video></li>
+    </ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
