--- a/main.html
+++ b/main.html
@@ -9,10 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-        <ul>
-            <a href="https://acciojob.com/">Home</a>
-            <a href="https://acciojob.com/blog/about/">About us</a>
-            <a href="https://acciojob.com/events.html">Contact us</a>
+         <ul>
+            <li><a href="https://acciojob.com/">Home</a></li>
+            
+            <li><a href="https://acciojob.com/blog/about/">About us</a></li>
+            <li><a href="https://acciojob.com/events.html"></a>Contact us</li>
         </ul>
     </nav>
     <h1>3 random videos</h1>
