--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
             <li><a href="https://acciojob.com/">Home</a></li>
             
             <li><a href="https://acciojob.com/blog/about/">About us</a></li>
-            <li><a href="https://acciojob.com/events.html"></a>Contact us</li>
+            <li><a href="https://acciojob.com/events.html">Contact us</a></li>
         </ul>
     </nav>
     <h1>3 random videos</h1>
