--- a/main.html
+++ b/main.html
@@ -18,7 +18,9 @@
     </nav>
     <h1>3 random videos</h1>
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video><br>
+    <h1>3 random videos</h1>
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video><br>
+    <h1>3 random videos</h1>
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
         controls></video>
     <script type="text/javascript" src="./script.js">
