--- a/main.html
+++ b/main.html
@@ -3,28 +3,26 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<nav>
-         <ul>
-            <li><a href="https://acciojob.com/">Home</a></li>
-            
-            <li><a href="https://acciojob.com/blog/about/">About us</a></li>
-            <li><a href="https://acciojob.com/events.html">Contact us</a></li>
+    <!-- the entire body must be written by student -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact us</a></li>
         </ul>
     </nav>
     <h1>3 random videos</h1>
-    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video><br>
-    <h1>3 random videos</h1>
-    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video><br>
-    <h1>3 random videos</h1>
+
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
         controls></video>
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
