--- a/main.html
+++ b/main.html
@@ -17,10 +17,10 @@
     </nav>
     <h1>3 random videos</h1>
 
-    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
-    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Video 1</video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>Video 2</video>
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
-        controls></video>
+        controls>Video 3</video>
     <script type="text/javascript" src="./script.js">
     </script>
 
