--- a/main.html
+++ b/main.html
@@ -9,16 +9,29 @@
 <body>
     <!-- the entire body must be written by student -->
     <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Contact us</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="#">About us</a></li>
+
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </nav>
     </nav>
     <h1>3 random videos</h1>
 
-    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Video 1</video>
-    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>Video 2</video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Video
+        1</video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>Video
+        2</video>
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
         controls>Video 3</video>
     <script type="text/javascript" src="./script.js">
