--- a/main.html
+++ b/main.html
@@ -26,7 +26,8 @@
             </ul>
         </nav>
     </nav>
-    <h1>3 random videos</h1>
+    
+    <h1>3 random videos</h1><br>
 
     <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Video
         1</video>
